force-app/main/default/objects/ProductCategoryJunktion__c/ProductCategoryJunktion__c.object-meta.xml
<CustomObject>
    <label>Product Category Junktion</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RowNum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Category Junktion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>