force-app/main/default/objects/ProductCategoryJunktion__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Category</label>
    <referenceTo>ProductCategory__c</referenceTo>
    <relationshipLabel>Product Category Junktion</relationshipLabel>
    <relationshipName>Product_Category_Junktion</relationshipName>
    <type>Lookup</type>
</CustomField>