force-app/main/default/objects/ProductCategoryJunktion__c/fields/CategoryName__c.field-meta.xml
<CustomField>
    <fullName>CategoryName__c</fullName>
    <formula>Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Name</label>
    <type>Text</type>
</CustomField>