force-app/main/default/objects/ProductCategoryJunktion__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>ProductCategoryJunktion__c</referenceTo>
    <relationshipLabel>Product Category Junktion</relationshipLabel>
    <relationshipName>Product_Category_Junktion</relationshipName>
    <type>Lookup</type>
</CustomField>