force-app/main/default/objects/ProductCategoryJunktion__c/fields/ProdKind__c.field-meta.xml
<CustomField>
    <fullName>ProdKind__c</fullName>
    <label>Prod Kind</label>
    <length>18</length>
    <type>Text</type>
</CustomField>