force-app/main/default/objects/ProductCategoryJunktion__c/fields/ProdType__c.field-meta.xml
<CustomField>
    <fullName>ProdType__c</fullName>
    <label>Prod Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>