force-app/main/default/objects/ProductCategoryJunktion__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Category Junktion</relationshipLabel>
    <relationshipName>Product_Category_Junktion</relationshipName>
    <type>Lookup</type>
</CustomField>