force-app/main/default/objects/ProductCategoryJunktion__c/fields/R__c.field-meta.xml
<CustomField>
    <fullName>R__c</fullName>
    <formula>Product__r.NameRus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R</label>
    <type>Text</type>
</CustomField>