force-app/main/default/objects/ProductCategoryJunktion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ID_ERP__c</columns>
    <columns>ProdType__c</columns>
    <columns>ProdKind__c</columns>
    <columns>Product__c</columns>
    <columns>Category__c</columns>
    <columns>CategoryName__c</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>